Hooray everything is merged.

--- a/templates/product.html
+++ b/templates/product.html
@@ -3,11 +3,11 @@
 
         <h3><span id="fbName">{{fbName}}</span> may like...</h3>
 
-        <p>IMAGE HERE</p>
+        <div id="productImage">IMAGE HERE</div>
 
         <h2><span id="productName">{{productName}}</span></h2>
-        <p>$ <span id="price">{{price}}</span></p>
-        <a href=""><p>View in TradeMe</p></a>
+        <p><span id="price">{{price}}</span></p>
+        <span id="trademeLink">{{tradme link}}</span>
 
 
 
