--- a/templates/selectfriends.html
+++ b/templates/selectfriends.html
@@ -4,18 +4,12 @@
       
       
 <select class="form-control" id="chooseFriend">
-  <option value="FB_User_ID">Friend 1</option>
-  <option value="FB_User_ID">Friend 2</option>
-  <option value="FB_User_ID">Friend 3</option>
-  <option value="FB_User_ID">Friend 4</option>
-  <option value="FB_User_ID">Friend 5</option>
-  <option value="FB_User_ID">Friend 6</option>
 </select>
 
 
 
 
-<p><a class="btn btn-success btn-lg" href="product.html" role="button">Find me gifts! &raquo;</a></p>
+<p><a class="btn btn-success btn-lg" id="giftButton" href="#" role="button">Find me gifts! &raquo;</a></p>
 
 
       <h2>Don't see your friend? <a href="#">Send them an invite!</a></h2>
