Added 'share' option for Facebook

--- a/templates/selectfriends.html
+++ b/templates/selectfriends.html
@@ -12,7 +12,7 @@
 <p><a class="btn btn-success btn-lg" id="giftButton" href="#" role="button">Find me gifts! &raquo;</a></p>
 
 
-      <h2>Don't see your friend? <a href="#">Send them an invite!</a></h2>
+      <h2>Don't see your friend? <a onclick="FBInvite()" href="#">Send them an invite!</a></h2>
 
 
   
