--- a/templates/product.html
+++ b/templates/product.html
@@ -1,7 +1,7 @@
 <div class="jumbotron">
     <div class="container">
 
-        <h3><span id="fbName">{{fbName}}</span> may like...</h3>
+        <h3>Did you know that <span id="fbName">{{fbName}}</span> likes <span id="likeName">{{likes}}</span>, why not get them...</h3>
 
         <div id="productImage">IMAGE HERE</div>
 
