Commit Final w/o testing

--- a/templates/product.html
+++ b/templates/product.html
@@ -1,13 +1,15 @@
 <div class="jumbotron">
     <div class="container">
 
-        <h3>Did you know that <span id="fbName">{{fbName}}</span> likes <span id="likeName">{{likes}}</span>, why not get them...</h3>
+        <h3>Did you know that <span id="fbName" class="highlight">{{fbName}}</span> likes <span id="likeName" class="highlight">{{likes}}</span>, why not get them...</h3>
 
         <div id="productImage">IMAGE HERE</div>
 
         <h2><span id="productName">{{productName}}</span></h2>
         <p><span id="price">{{price}}</span></p>
-        <span id="trademeLink">{{tradme link}}</span>
+        <h3><span id="trademeLink">{{tradme link}}</span></h3>
+
+        <h3><a href="#" id="NextGift" class="highlight">Find another gift</a></h3>
 
 
 
