--- a/templates/selectfriends.html
+++ b/templates/selectfriends.html
@@ -1,6 +1,6 @@
 <div class="jumbotron">
    <div class="container">
-      <h2>Great <span id="fbName">{{fbName}}</span>!</br>Now choose a friend..</h2>
+      <h2>Great <span id="fbName" class="highlight">{{fbName}}</span>!</br>Now choose a friend..</h2>
       
       
 <select class="form-control" id="chooseFriend">
