--- a/css/style.css
+++ b/css/style.css
@@ -20,3 +20,13 @@
 	width:100%;
 	
 }
+
+.highlight {
+	color: black;
+	text-decoration: underline;
+}
+
+a {
+	color: white;
+	text-decoration: underline;
+}
